--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale1.0">
-    <title>Document</title>
+    <title>Odin Recipes | Lasagna</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Recipe Title</a>
+    <a href="../index.html">Home</a>
+    
+    <h2>Lasagna</h2>
+    <!-- Image of the dish -->
+    <img src="https://www.theodinproject.com" alt="A delicious plate of cheesy lasagna">
+
+    <h3>Description</h3>
+    <p>
+        This classic lasagna recipe is made with a hearty meat sauce, 
+        creamy ricotta cheese, and melted mozzarella. It's the ultimate 
+        comfort food for any family dinner.
+    </p>
+    <p>
+        While it takes some time to assemble, the layers of flavor 
+        make every minute worth the effort!
+    </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>1 lb Ground beef</li>
+        <li>Ricotta cheese</li>
+        <li>Mozzarella cheese</li>
+        <li>Marinara sauce</li>
+        <li>Fresh parsley</li>
+    </ul>
+
+    <ul>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 1</a></li>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+  </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Boil the lasagna noodles according to the package instructions.</li>
+        <li>Brown the ground beef in a large skillet and add marinara sauce.</li>
+        <li>In a separate bowl, mix the ricotta cheese with fresh parsley.</li>
+        <li>Layer the noodles, meat sauce, and cheese mixture in a baking dish.</li>
+        <li>Bake at 375°F (190°C) for 30 minutes or until bubbly and golden.</li>
+    </ol>
   </body>
 </html> 
